fix: split organization settings rename authorization
